re PR fortran/34945 (LBOUND fails for array with KIND(complex) used in zero-sized dimension)

2008-02-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/34945
	* array.c (match_array_element_spec): Remove check for negative
	array size.
	(gfc_resolve_array_spec): Add check for negative size.

2008-02-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/34945
	* gfortran.dg/bounds_check_13.f: New test.

From-SVN: r132121